@@ -84,119 +84,6 @@ class _LightPipeline(ExtendedJavaWrapper):
         self._java_obj = self._new_java_obj(self._java_obj, pipelineModel._to_java())
 
 
-# ============
-# OCR SECTION
-# ============
-
-
-class _OcrCreateDataset(ExtendedJavaWrapper):
-    def __init__(self, spark, input_path):
-        super(_OcrCreateDataset, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.createDataset")
-        self._java_obj = self._new_java_obj(self._java_obj, spark, input_path)
-
-
-class _OcrCreateMap(ExtendedJavaWrapper):
-    def __init__(self, input_path):
-        super(_OcrCreateMap, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.createMap")
-        self._java_obj = self._new_java_obj(self._java_obj, input_path)
-
-
-class _OcrSetPreferredMethod(ExtendedJavaWrapper):
-    def __init__(self, value):
-        super(_OcrSetPreferredMethod, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.setPreferredMethod")
-        self._java_obj = self._new_java_obj(self._java_obj, value)
-
-
-class _OcrGetPreferredMethod(ExtendedJavaWrapper):
-    def __init__(self):
-        super(_OcrGetPreferredMethod, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.getPreferredMethod")
-        self._java_obj = self._new_java_obj(self._java_obj)
-
-
-class _OcrSetFallbackMethod(ExtendedJavaWrapper):
-    def __init__(self, value):
-        super(_OcrSetFallbackMethod, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.setFallbackMethod")
-        self._java_obj = self._new_java_obj(self._java_obj, value)
-
-
-class _OcrGetFallbackMethod(ExtendedJavaWrapper):
-    def __init__(self):
-        super(_OcrGetFallbackMethod, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.getFallbackMethod")
-        self._java_obj = self._new_java_obj(self._java_obj)
-
-
-class _OcrSetMinSizeBeforeFallback(ExtendedJavaWrapper):
-    def __init__(self, value):
-        super(_OcrSetMinSizeBeforeFallback, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.setMinSizeBeforeFallback")
-        self._java_obj = self._new_java_obj(self._java_obj, value)
-
-
-class _OcrGetMinSizeBeforeFallback(ExtendedJavaWrapper):
-    def __init__(self):
-        super(_OcrGetMinSizeBeforeFallback, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.getMinSizeBeforeFallback")
-        self._java_obj = self._new_java_obj(self._java_obj)
-
-
-class _OcrSetPageSegMode(ExtendedJavaWrapper):
-    def __init__(self, value):
-        super(_OcrSetPageSegMode, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.setPageSegMode")
-        self._java_obj = self._new_java_obj(self._java_obj, value)
-
-
-class _OcrGetPageSegMode(ExtendedJavaWrapper):
-    def __init__(self):
-        super(_OcrGetPageSegMode, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.getPageSegMode")
-        self._java_obj = self._new_java_obj(self._java_obj)
-
-
-class _OcrSetEngineMode(ExtendedJavaWrapper):
-    def __init__(self, value):
-        super(_OcrSetEngineMode, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.setEngineMode")
-        self._java_obj = self._new_java_obj(self._java_obj, value)
-
-
-class _OcrGetEngineMode(ExtendedJavaWrapper):
-    def __init__(self):
-        super(_OcrGetEngineMode, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.getEngineMode")
-        self._java_obj = self._new_java_obj(self._java_obj)
-
-
-class _OcrSetPageIteratorLevel(ExtendedJavaWrapper):
-    def __init__(self, value):
-        super(_OcrSetPageIteratorLevel, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.setPageIteratorLevel")
-        self._java_obj = self._new_java_obj(self._java_obj, value)
-
-
-class _OcrGetPageIteratorLevel(ExtendedJavaWrapper):
-    def __init__(self):
-        super(_OcrGetPageIteratorLevel, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.getPageIteratorLevel")
-        self._java_obj = self._new_java_obj(self._java_obj)
-
-
-class _OcrSetScalingFactor(ExtendedJavaWrapper):
-    def __init__(self, value):
-        super(_OcrSetScalingFactor, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.setScalingFactor")
-        self._java_obj = self._new_java_obj(self._java_obj, value)
-
-
-class _OcrGetSplitPages(ExtendedJavaWrapper):
-    def __init__(self):
-        super(_OcrGetSplitPages, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.getSplitPages")
-        self._java_obj = self._new_java_obj(self._java_obj)
-
-
-class _OcrSetSplitPages(ExtendedJavaWrapper):
-    def __init__(self, value):
-        super(_OcrSetSplitPages, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.setSplitPages")
-        self._java_obj = self._new_java_obj(self._java_obj, value)
-
-
-class _OcrUseErosion(ExtendedJavaWrapper):
-    def __init__(self, use, k_size, k_shape):
-        super(_OcrUseErosion, self).__init__("com.johnsnowlabs.nlp.util.io.OcrHelper.useErosion")
-        self._java_obj = self._new_java_obj(self._java_obj, use, k_size, k_shape)
-
-
 # ==================
 # Utils
 # ==================
